k8s/notification-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-depl
  namespace: taskflow
  labels:
    environment: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification
  template:
    metadata:
      labels:
        app: notification
    spec:
      containers:
        - name: notification
          image: ahmedelmasry1985/notificationsrv:latest
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "200m"
