k8s/tasksapi-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tasksapi-depl
  namespace: taskflow
  labels:
    environment: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tasksapi
  template:
    metadata:
      labels:
        app: tasksapi
    spec:
      containers:
        - name: tasksapi
          image: ahmedelmasry1985/tasksapi:latest
          ports:
            - name: http 
              containerPort: 8080
            - name: https 
              containerPort: 8081
          resources:
            requests:
              memory: "64Mi"
              cpu: "256m"
            limits:
              memory: "128Mi"
              cpu: "512m"
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: tasksapi-clusterip-svc
  namespace: taskflow
  labels:
    environment: production
spec:
  type: ClusterIP
  selector:
    app: tasksapi
  ports:
    - name: tasksapihttp
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: tasksapihttps
      protocol: TCP
      port: 8081
      targetPort: 8081
