k8s/usersapi-mssql-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usersapi-mssql-depl
  namespace: taskflow
  labels:
    environment: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: usersapi-mssql
  template:
    metadata:
      labels:
        app: usersapi-mssql
    spec:
      containers:
        - name: usersapi-mssql
          image: mcr.microsoft.com/mssql/server:2017-latest
          ports:
            - containerPort: 1433
          volumeMounts:
            - name: usersapi-mssql-data
              mountPath: /var/opt/mssql
      volumes:
        - name: usersapi-mssql-data
          persistentVolumeClaim:
            claimName: usersapi-mssql-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: usersapi-mssql-clusterip-srv
  namespace: taskflow
  labels:
    environment: production
spec:
  type: ClusterIP
  selector:
    app: usersapi-mssql
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
